fixed loverlapping text issue

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -30,23 +30,13 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
 
 .title {
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
-  line-height: 29px;
+  line-height: 1.5rem;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -54,6 +44,7 @@
   color: #2B2B2B;
   
 }
+
 
 .subtitle {
   margin: 1rem;
@@ -68,13 +59,61 @@
   
 }
 
+.specsSubtitle{
+  font-family: 'Montserrat';
+  display: flex;
+  align-content: center;
+  background: #F9F9F9;
+}
+
+.specsChild {
+  margin-left: 1rem;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  justify-content: space-between;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.06em;
+}
+
+
+
+/* .specsbutton{
+  margin-left: .7rem;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.06em;
+  background-color: #FFFFFF;
+  border: none; 
+} 
+*/
+.lineDescription {
+  margin-left: 1rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: 'Montserrat';
+  font-style: 900;
+  font-weight: 400;
+  font-size: .8rem;
+  line-height: size;
+  letter-spacing: 0.06em;
+  color: #787878;
+}
+
 .description {
   margin: 1rem;
   font-family: 'Montserrat';
   font-style: 900;
   font-weight: 400;
   font-size: .8rem;
-  line-height: .4;
+  line-height: size;
   letter-spacing: 0.06em;
   color: #787878;
 }
@@ -97,35 +136,7 @@
   max-width: 800px;
 }
 
-.card {
-  margin: .5rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 600px;
-}
 
-a.card:hover,
-a.card:focus,
-a.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.25rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.25;
-}
 
 .logo {
   height: 1em;
@@ -145,7 +156,7 @@ a.card:active {
 } */
 
 .randomWodButton{
-  top: 10rem;
+  top: 15rem;
   position: relative;
   background-color: #FFFFFF; /* Green */
   border: none;
@@ -198,4 +209,21 @@ a.card:active {
   background: #FFFFFF;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+}
+
+.pill{
+  display: inline-block;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  padding: 2px 10px;
+  gap: 10px;
+  background: #E0E0E0;
+  border-radius: 100px;
+  border: none;
+}
+
+.levels{
+  display: flex;
+  justify-content: space-between;
 }
